# sheafshifter

./: .gitignore  .gitmodules  KONKUR.py  enet.license.txt  llm_signal_debugger.py  logging_II.py  mproc_pyenet_serv_iii.py  mproc_pyenet_serv_iv.py  pyenet_client.py  pyenet_conncalib.py  pyenet_serv.py  pyproject.toml  readme.md  shsh_proto_i.py  shsh_proto_ii.py  shsh_proto_iii.py  shsh_proto_iv.py  shsh_proto_v.py  shsh_proto_vi.py  task.proto
loggerII/: index.html
loggerII/js/: gotime.js
notes/: aiotestcatch.py  aiotestcatch2.py  aiotestcatch3.py  mpaio.py  mpool_bench.py  mprcs_bench.py  mproc_pyenet_serv.py  mproc_pyenet_serv_ii.py  mprocaio_pyenet_serv.py  mprtestcatch4.py  serializer_bench.py  smach_pyenet_serv.py  testcatch.py  testchuck.py
