[project]
name = "sheafshifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.0.12",
    "enet",
    "msgspec>=0.19.0",
    "setuptools>=78.1.0",
    "simplejson>=3.20.1",
]

[tool.uv.sources]
enet = { path = "lib/pyenet" }
